--- a/src/code.html
+++ b/src/code.html
@@ -72,15 +72,15 @@
 <div class="relative flex h-auto min-h-screen w-full flex-col bg-background-light dark:bg-background-dark">
 <div class="flex flex-col gap-2 bg-[#101b22] px-4 pt-4 pb-2 sticky top-0 z-10 border-b border-white/10">
 <div class="flex items-center h-12 justify-between">
-<div class="flex size-12 shrink-0 items-center -ml-3">
+<button
+  type="button"
+  id="gx-back-button"
+  class="flex size-12 shrink-0 items-center justify-center -ml-3 rounded-full hover:bg-white/10 transition"
+>
 <span class="material-symbols-outlined text-white/90">arrow_back</span>
-</div>
-<div class="flex w-12 items-center justify-end">
-<button class="flex max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-12 bg-transparent text-white/90 gap-2 text-base font-bold leading-normal tracking-[0.015em] min-w-0 p-0">
-<div class="text-white/90">
-<span class="material-symbols-outlined">more_vert</span>
-</div>
 </button>
+<div class="flex w-12 items-center justify-end">
+  <!-- Right side intentionally left empty for now -->
 </div>
 </div>
 <div class="flex items-center gap-2">
@@ -2181,6 +2181,18 @@ AI-generated view based on this keyframe. For products, you can also use Google 
 
   // Ensure we first load the reel, then hydrate the UI once data is available.
   window.addEventListener('DOMContentLoaded', async () => {
+    const backBtn = document.getElementById('gx-back-button');
+    if (backBtn) {
+      backBtn.addEventListener('click', () => {
+        // Prefer going back in history; if that fails, go to reel input.
+        if (window.history.length > 1) {
+          window.history.back();
+        } else {
+          window.location.href = '/reel-input';
+        }
+      });
+    }
+
     const skeleton = document.getElementById('gx-loading-skeleton');
     const mainContent = document.getElementById('gx-main-content');
     try {
