Fix: Standardize mobile responsive design across all pages
- Add max-w-[480px] mx-auto w-full to all main content containers
- Ensures consistent mobile-friendly width across:
  - Generic view
  - Browse reels
  - Processing status
  - Workout timer (extracted view)
  - Reel input (already had it)
- Prevents wide layouts on mobile devices

--- a/public/browse-reels.html
+++ b/public/browse-reels.html
@@ -71,7 +71,7 @@
         </div>
       </header>
 
-      <main class="flex-1 px-4 py-3">
+      <main class="flex-1 px-4 py-3 max-w-[480px] mx-auto w-full">
         <!-- Loading state -->
         <div id="browse-loading" class="flex items-center justify-center py-12">
           <div class="flex flex-col items-center gap-3">
