--- a/public/extracted-view.html
+++ b/public/extracted-view.html
@@ -43,7 +43,7 @@
   </head>
 <body class="bg-background-light dark:bg-background-dark">
 <div class="relative flex h-auto min-h-screen w-full flex-col font-display group/design-root overflow-x-hidden">
-<div class="workout-detail-view flex-1 pb-24" id="workoutDetailView">
+<div class="workout-detail-view flex-1 pb-24 max-w-[480px] mx-auto w-full" id="workoutDetailView">
 <div class="flex items-center bg-background-light dark:bg-background-dark p-4 pb-2 justify-between sticky top-0 z-10">
 <div class="text-slate-800 dark:text-white flex size-12 shrink-0 items-center justify-center -ml-4">
 <span class="material-symbols-outlined text-2xl">arrow_back</span>
