--- a/public/generic-view.html
+++ b/public/generic-view.html
@@ -230,7 +230,7 @@ AI-generated view based on this keyframe. For products, you can also use Google 
 </div>
 </div>
 </div>
-<div class="px-4 pt-4 pb-8 mt-auto">
+<div class="px-4 pt-4 pb-8 mt-auto max-w-[480px] mx-auto w-full">
 <div class="flex items-start gap-2 text-center w-full justify-center">
 <span class="material-symbols-outlined text-base text-white/50 mt-0.5">info</span>
 <p id="gx-fallback-note" class="text-white/50 text-sm font-normal leading-normal max-w-xs">Auto-formatted generic view. Original type: recipe_v2. Reason: Key fields missing.</p>
