--- a/public/processing-status.html
+++ b/public/processing-status.html
@@ -78,7 +78,7 @@
   </div>
 
   <!-- Main Content -->
-  <div class="flex flex-1 flex-col items-center justify-center p-6 text-center">
+  <div class="flex flex-1 flex-col items-center justify-center p-6 text-center max-w-[480px] mx-auto w-full">
     <!-- Circular progress indicator -->
     <div class="relative flex h-48 w-48 items-center justify-center">
       <svg class="absolute inset-0 h-full w-full" viewBox="0 0 100 100">
