Fix: Add mobile width constraints to all content sections in generic view
- Add max-w-[480px] mx-auto w-full to gx-loading-skeleton
- Add max-w-[480px] mx-auto w-full to gx-main-content
- Ensures consistent mobile-friendly width across all sections
- All pages now properly constrained for mobile aspect ratio

--- a/public/generic-view.html
+++ b/public/generic-view.html
@@ -128,7 +128,7 @@
 </div>
 </div>
 
-<div id="gx-loading-skeleton" class="flex flex-col space-y-4 p-4">
+<div id="gx-loading-skeleton" class="flex flex-col space-y-4 p-4 max-w-[480px] mx-auto w-full">
   <div class="h-5 w-32 rounded-full bg-white/10 animate-pulse"></div>
   <div class="h-4 w-64 rounded-full bg-white/5 animate-pulse"></div>
   <div class="grid grid-cols-2 gap-4 pt-4">
@@ -137,7 +137,7 @@
   </div>
 </div>
 
-<div id="gx-main-content" class="flex flex-col space-y-8 p-4 hidden">
+<div id="gx-main-content" class="flex flex-col space-y-8 p-4 max-w-[480px] mx-auto w-full hidden">
 <p id="gx-summary" class="text-white/70 text-base font-normal leading-normal pb-3">
   AI-generated generic view. Some fields could not be fully structured.
 </p>
