--- a/public/reel-input.html
+++ b/public/reel-input.html
@@ -83,7 +83,7 @@
   </style>
   </head>
 <body>
-<div class="relative flex h-screen w-full flex-col bg-background-light dark:bg-background-dark font-display group/design-root overflow-y-auto">
+<div class="w-full max-w-[480px] mx-auto min-h-screen flex flex-col bg-background-light dark:bg-background-dark font-display">
 <header class="flex shrink-0 items-center bg-background-light dark:bg-background-dark p-4 pb-2 justify-between sticky top-0 z-10">
   <div class="flex size-12 shrink-0 items-center justify-start">
     <span class="material-symbols-outlined text-zinc-800 dark:text-white" style="font-size: 28px;">
