--- a/public/processing-status.html
+++ b/public/processing-status.html
@@ -65,7 +65,7 @@
   </style>
   </head>
 <body class="bg-background-light dark:bg-background-dark font-display">
-<div class="relative flex h-screen w-full flex-col">
+<div class="w-full max-w-[480px] mx-auto min-h-screen flex flex-col">
   <!-- Top App Bar -->
   <div class="flex items-center p-4 pb-2 justify-between bg-background-light dark:bg-background-dark">
     <button class="text-slate-800 dark:text-white flex size-10 shrink-0 items-center justify-center rounded-full hover:bg-slate-200 dark:hover:bg-slate-800 transition-colors">
@@ -78,7 +78,7 @@
   </div>
 
   <!-- Main Content -->
-  <div class="flex flex-1 flex-col items-center justify-center p-6 text-center max-w-[480px] mx-auto w-full">
+  <div class="flex flex-1 flex-col items-center justify-center p-6 text-center">
     <!-- Circular progress indicator -->
     <div class="relative flex h-48 w-48 items-center justify-center">
       <svg class="absolute inset-0 h-full w-full" viewBox="0 0 100 100">
