--- a/src/code.html
+++ b/src/code.html
@@ -69,7 +69,7 @@
   </style>
   </head>
 <body class="font-display bg-background-light dark:bg-background-dark text-white/90">
-<div class="relative flex h-auto min-h-screen w-full flex-col bg-background-light dark:bg-background-dark">
+<div class="w-full max-w-[480px] mt-4 mx-auto">
 <div class="flex flex-col gap-2 bg-[#101b22] px-4 pt-4 pb-2 sticky top-0 z-10 border-b border-white/10">
 <div class="flex items-center h-12 justify-between">
 <button
